6_Frontend-App/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "2048-deployment"
  namespace: "prod"
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
      - image: wiehahne/dockerhubrepo
        imagePullPolicy: Always
        name: "2048"
        ports:
        - containerPort: 80
