6_Frontend-App/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: travel-frontend
spec:
  backend:
    serviceName: travel-frontend
    servicePort: 80
